# esp32-xiaofeng

./: .gitignore  CMakeLists.txt  README.md  convert_gif_frames.py  gen_cjk_font.py  generate_font.py  sdkconfig.defaults.esp32s31
components/esp_asrc/: CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  idf_component.yml
components/esp_asrc/examples/asrc_demo/: CMakeLists.txt  README.md  README_CN.md  pytest_asrc_demo.py  sdkconfig.defaults
components/esp_asrc/examples/asrc_demo/main/: CMakeLists.txt  asrc_example.c  idf_component.yml  thetest16_1.pcm
components/esp_asrc/hw/caps/: asrc_caps_check.h
components/esp_asrc/hw/caps/esp32s31/: asrc_caps_check.c
components/esp_asrc/hw/driver/: esp_asrc_hw.c  esp_asrc_hw.h
components/esp_asrc/hw/private_inc/: asrc_hw_ops.h
components/esp_asrc/hw/src/: asrc_hw_ops.c
components/esp_asrc/include/: esp_asrc.h  esp_asrc_types.h
components/esp_asrc/private_inc/: asrc_common.h  asrc_utils.h
components/esp_asrc/src/: asrc_mem.c  asrc_utils.c  esp_asrc.c
components/esp_asrc/sw/private_inc/: asrc_sw_bit_cvt_ops.h  asrc_sw_ch_cvt_ops.h  asrc_sw_rate_cvt_ops.h
components/esp_asrc/sw/src/: asrc_sw_bit_cvt_ops.c  asrc_sw_ch_cvt_ops.c  asrc_sw_rate_cvt_ops.c
components/esp_asrc/test_apps/: CMakeLists.txt  partition.csv  pytest_esp_asrc.py  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
components/esp_asrc/test_apps/main/: 16_to_48_21.pcm  CMakeLists.txt  asrc_branch_test.c  asrc_quality_test.c  asrc_quality_test.h  asrc_test_hw.c  asrc_test_sw.c  idf_component.yml  test_16000_2_16.pcm  test_asrc_main.c  thetest32_1.pcm
components/esp_bt_audio/: CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  README_CN.md  idf_component.yml
components/esp_bt_audio/examples/bt_audio/: CMakeLists.txt  README.md  README_CN.md  partitions.csv  partitions_esp32s31.csv  pytest_bt_audio.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s31  sdkconfig.defaults.esp32s31.classic  sdkconfig.defaults.esp32s31.le
components/esp_bt_audio/examples/bt_audio/main/: CMakeLists.txt  cmd_reg.c  idf_component.yml  main.c  pool_reg.c  pool_reg.h  stream_proc.h
components/esp_bt_audio/include/: esp_bt_audio.h  esp_bt_audio_classic.h  esp_bt_audio_defs.h  esp_bt_audio_event.h  esp_bt_audio_host.h  esp_bt_audio_le.h  esp_bt_audio_le_playback_sync.h  esp_bt_audio_media.h  esp_bt_audio_pb.h  esp_bt_audio_playback.h  esp_bt_audio_stream.h  esp_bt_audio_tel.h  esp_bt_audio_vol.h
components/esp_bt_audio/io/: esp_gmf_io_bt.c  esp_gmf_io_bt.h
components/esp_bt_audio/private_inc/: bt_audio_evt_dispatcher.h  bt_audio_ops.h
components/esp_bt_audio/private_inc/classic/: bt_audio_a2dp.h  bt_audio_avrcp.h  bt_audio_classic.h  bt_audio_classic_stream.h  bt_audio_hfp.h  bt_audio_pbac.h
components/esp_bt_audio/private_inc/le/: bt_audio_le.h  bt_audio_le_adv_builder.h  bt_audio_le_broadcast_sink.h  bt_audio_le_broadcast_source.h  bt_audio_le_ccp.h  bt_audio_le_csip.h  bt_audio_le_mcc.h  bt_audio_le_micp.h  bt_audio_le_pacs.h  bt_audio_le_scan_delegator.h  bt_audio_le_stream.h  bt_audio_le_unicast_server.h  bt_audio_le_vcp.h
components/esp_bt_audio/src/: bt_audio_evt_dispatcher.c  bt_audio_ops.c  esp_bt_audio.c  esp_bt_audio_host.c  esp_bt_audio_stream.c
components/esp_bt_audio/src/classic/: bt_audio_classic.c
components/esp_bt_audio/src/classic/classic_stream/: bt_audio_classic_stream.c
components/esp_bt_audio/src/classic/profiles/: bt_audio_a2dp_sink.c  bt_audio_a2dp_src.c  bt_audio_avrcp_ct.c  bt_audio_avrcp_tg.c  bt_audio_hfp_hf.c  bt_audio_pbac.c
components/esp_bt_audio/src/le/: bt_audio_le.c
components/esp_bt_audio/src/le/le_stream/: bt_audio_le_stream.c
components/esp_bt_audio/src/le/playback_sync/: bt_audio_le_playback_sync.c
components/gmf_app_utils/: CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/gmf_app_utils/src/: esp_gmf_app_setup_peripheral.c  esp_gmf_app_unit_test.c
components/gmf_app_utils/test_apps/: partitions.csv  pytest_gmf_app_utils.py  sdkconfig.defaults  sdkconfig.defaults.esp32p4
components/gmf_app_utils/test_apps/main/: gmf_app_utils_test.c  idf_component.yml
components/gmf_core/test_apps/components/test_utils/: CMakeLists.txt
components/gmf_fft/: CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  idf_component.yml
components/gmf_fft/examples/fft_spectrum_print/: CMakeLists.txt  README.md  README_CN.md  pytest_fft_spectrum_print.py  sdkconfig.defaults
components/gmf_fft/include/: esp_gmf_fft.h  esp_gmf_fft_heap.h
components/gmf_fft/src/common/: fft_heap.c  fft_power2_q15.c
components/gmf_fft/src/esp32s3/: fft_pie_radix2_dit_s16.S
components/gmf_fft/src/esp_c/: gmf_fft_radix2_dit_s16.c
components/gmf_fft/src/riscv_pie/: fft_pie_radix2_dit_s16.S
components/gmf_fft/test_apps/: CMakeLists.txt  pytest_gmf_fft.py  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
components/gmf_fft/test_apps/main/: CMakeLists.txt  app_main.c  gmf_fft_test_cases.h  gmf_fft_test_runner.c  gmf_fft_test_runner.h  idf_component.yml  test_gmf_fft_api.c  test_gmf_fft_forward_vs_float.c
components/gmf_loader/: CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  idf_component.yml
components/gmf_loader/Kconfigs/: kconfig.ai_audio  kconfig.audio  kconfig.audio_codec.dec  kconfig.audio_codec.enc  kconfig.audio_effects  kconfig.audio_muxer  kconfig.io.reader  kconfig.io.writer  kconfig.video_codec.dec  kconfig.video_codec.enc  kconfig.video_effects
components/gmf_loader/include/: gmf_loader_setup_defaults.h
components/gmf_loader/src/: gmf_loader_setup_ai_audio.c  gmf_loader_setup_all_defaults.c  gmf_loader_setup_audio_codec.c  gmf_loader_setup_audio_effects.c  gmf_loader_setup_audio_muxer.c  gmf_loader_setup_io.c
components/gmf_loader/test_apps/: partitions.csv  partitions_16m.csv  partitions_esp32.csv  pytest_gmf_loader.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s31
components/gmf_loader/test_apps/main/: gmf_loader_test.c  idf_component.yml
(+457 files in other folders)
